--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -3,11 +3,16 @@
     "version": "1.0.0",
     "main": "./src/index.ts",
     "types": "./src/index.ts",
+    "exports": {
+        ".": "./src/index.ts",
+        "./server": "./src/server.ts"
+    },
     "scripts": {
         "lint": "tsc --noEmit"
     },
     "dependencies": {
         "@supabase/supabase-js": "^2.39.3",
+        "@supabase/ssr": "^0.1.0",
         "@repo/types": "*"
     },
     "devDependencies": {
