--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -5,7 +5,9 @@
     "types": "./src/index.ts",
     "exports": {
         ".": "./src/index.ts",
-        "./server": "./src/server.ts"
+        "./server": "./src/server.ts",
+        "./supabase/client": "./src/supabase/client.ts",
+        "./i18n": "./src/i18n/index.ts"
     },
     "scripts": {
         "lint": "tsc --noEmit"
