--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,8 @@
         "@repo/ui": "*",
         "@supabase/ssr": "^0.1.0",
         "@supabase/supabase-js": "^2.39.3",
+        "framer-motion": "^12.29.0",
+        "lucide-react": "^0.309.0",
         "next": "14.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
