--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -14,6 +14,7 @@
         "@repo/ui": "*",
         "@supabase/ssr": "^0.1.0",
         "@supabase/supabase-js": "^2.39.3",
+        "date-fns": "^4.1.0",
         "framer-motion": "^12.29.0",
         "lucide-react": "^0.309.0",
         "next": "14.1.0",
