--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -17,7 +17,7 @@
         "date-fns": "^4.1.0",
         "framer-motion": "^12.29.0",
         "lucide-react": "^0.309.0",
-        "next": "14.1.0",
+        "next": "^14.2.10",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "zod": "^3.22.4"
