--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,7 @@
         "@supabase/supabase-js": "^2.39.3",
         "framer-motion": "^12.29.0",
         "lucide-react": "^0.309.0",
-        "next": "14.1.0",
+        "next": "^14.2.10",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "zod": "^3.22.4"
