--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "clean": "rm -rf node_modules apps/*/node_modules apps/*/.next packages/*/node_modules"
   },
   "devDependencies": {
+    "@alloc/quick-lru": "^5.2.0",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "dlv": "^1.1.3",
+    "object-hash": "^3.0.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3"
   },
