--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -18,8 +18,10 @@
         "framer-motion": "^12.29.0",
         "lucide-react": "^0.309.0",
         "next": "^14.2.10",
+        "postcss-selector-parser": "^6.1.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "tailwindcss-animate": "^1.0.7",
         "zod": "^3.22.4"
     },
     "devDependencies": {
