--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -8,6 +8,7 @@
         "./server": "./src/server.ts",
         "./supabase/client": "./src/supabase/client.ts",
         "./supabase/server": "./src/supabase/server.ts",
+        "./supabase/admin": "./src/supabase/admin.ts",
         "./i18n": "./src/i18n/index.ts"
     },
     "scripts": {
