--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
         "framer-motion": "^12.29.0",
         "lucide-react": "^0.309.0",
         "next": "^14.2.10",
+        "next-themes": "^0.4.6",
         "postcss-selector-parser": "^6.1.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
